Commit prueba from Sourcetree

--- a/Day 5/day_005.ipynb
+++ b/Day 5/day_005.ipynb
@@ -479,8 +479,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 108,
    "id": "782a3654-dc10-4ba2-9be1-99cab87bf367",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'cadena'"
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# El indice de una lista comienza en 0\n",
+    "\n",
+    "lista0[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62e90e1b-b004-4089-9a37-dcdf345fbc8e",
    "metadata": {},
    "outputs": [],
    "source": []
