--- a/Day 007/day_007.ipynb
+++ b/Day 007/day_007.ipynb
@@ -277,17 +277,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 1,
    "id": "7e1f4abf-4a6c-435f-8707-d76ea7e847bd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['escoba', 'tijera']"
+       "['escoba', 'tijera', 'papel']"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,6 +296,7 @@
     "cosas = []\n",
     "cosas.append('escoba')\n",
     "cosas.append('tijera')\n",
+    "cosas.append('papel')\n",
     "cosas\n"
    ]
   },
