Run cells - not modified

--- a/Day 002/day_002.ipynb
+++ b/Day 002/day_002.ipynb
@@ -18,23 +18,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "7b838d13-c893-48fa-9430-5b655488b90b",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-23T17:57:36.041295100Z",
+     "start_time": "2023-07-23T17:57:20.632896200Z"
+    }
+   },
    "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      "ingresa tu nombre:  Gerson\n",
-      "ingresa tu edad:  27\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hola, tu eres Gerson y tu edad es 27\n"
+      "Hola, tu eres Gerson y tu edad es 28\n"
      ]
     }
    ],
@@ -54,9 +51,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c8f8d967-35f5-4da2-b0fb-46bf3cd6f8a5",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-23T17:58:39.813625500Z",
+     "start_time": "2023-07-23T17:58:39.797584400Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
